--- a/Model_parameters.ipynb
+++ b/Model_parameters.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "9f979b3a-c3c1-4bf1-8cb7-41be1573e7ce",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "0111b1a2-6800-4dd1-a4a1-62231ff5bc18",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "8345f262-7eb9-4ecc-b15f-fbfb214daa4c",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "3de6bdf1-197b-4cbf-9353-d9dfb586b1ad",
    "metadata": {},
    "outputs": [
@@ -241,35 +241,13 @@
        "[261 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ele_ts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "09afeba3-1c18-4ad6-b716-3d5a0d709a8b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ts' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-5146c4e22799>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'ts' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "ts"
    ]
   },
   {
@@ -296,7 +274,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
+   "id": "7868e9cc-52d1-4366-bc8c-bb5918464e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>APUS37A72610</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yearmonth</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>197811</th>\n",
+       "      <td>0.032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197812</th>\n",
+       "      <td>0.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197901</th>\n",
+       "      <td>0.035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197902</th>\n",
+       "      <td>0.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197903</th>\n",
+       "      <td>0.036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202203</th>\n",
+       "      <td>0.162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202204</th>\n",
+       "      <td>0.162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202205</th>\n",
+       "      <td>0.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202206</th>\n",
+       "      <td>0.174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202207</th>\n",
+       "      <td>0.196</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>525 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          APUS37A72610\n",
+       "yearmonth             \n",
+       "197811           0.032\n",
+       "197812           0.034\n",
+       "197901           0.035\n",
+       "197902           0.034\n",
+       "197903           0.036\n",
+       "...                ...\n",
+       "202203           0.162\n",
+       "202204           0.162\n",
+       "202205           0.164\n",
+       "202206           0.174\n",
+       "202207           0.196\n",
+       "\n",
+       "[525 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ele_ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "f1c80434-2cfb-46e9-814d-1453bb5dac86",
    "metadata": {},
    "outputs": [],
